--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,3 @@
-.container{
-  margin: auto;
-  max-width: 600px;
-}
-
-.todoBlock{
-  padding: 30px;
-  margin-top: 50px;
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: -9px 17px 13px rgb(0 0 0 / 16%);
-}
-
-.delButton {
-  color: #fff;
-  border: none;
-  padding: 5px 9px;
-  border-radius: 50%;
-  cursor: pointer;
-  float: right;
-  background-color: darkgray;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
